Fix frontend accordion header text alignment

--- a/src/Mapbender/CoreBundle/Resources/public/sass/modules/_tabcontainer.scss
+++ b/src/Mapbender/CoreBundle/Resources/public/sass/modules/_tabcontainer.scss
@@ -83,11 +83,8 @@
   width: 100%;
     
   .accordion{
-    display: table-row;
-    >div{
-      display: table-cell;
-      @extend .button;
-    }
+    @extend .button;
+    display: block;
     &.active{
       cursor:default;
       background-color:darken($buttonFirstColor, 10%);
